codegen/tests/snapshots/codegen__ary4.snap
---
source: codegen/tests/codegen.rs
assertion_line: 23
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 0
  mov dword ptr [rbp-12], 1
  mov dword ptr [rbp-8], 2
  mov eax, dword ptr [rbp-12]
  mov ecx, dword ptr [rbp-8]
  add eax, ecx
  add rsp, 16
  pop rbp
  ret 

