codegen/tests/snapshots/codegen__call2.snap
---
source: codegen/tests/codegen.rs
assertion_line: 24
expression: mach_module
---
  .text
  .intel_syntax noprefix
  .globl f
f:
.LBL0_0:
  push rbp
  mov rbp, rsp
  mov eax, edi
  pop rbp
  ret 
  .globl main
main:
.LBL1_0:
  push rbp
  mov rbp, rsp
  mov edi, 1
  call f
  pop rbp
  ret 

