codegen/tests/snapshots/codegen__condbr.snap
---
source: codegen/tests/codegen.rs
assertion_line: 25
expression: mach_module
---
  .text
  .intel_syntax noprefix
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 2
  mov eax, dword ptr [rbp-4]
  cmp eax, 2
  je .LBL0_1
  jmp .LBL0_2
.LBL0_1:
  mov eax, 1
  add rsp, 16
  pop rbp
  ret 
.LBL0_2:
  mov eax, 2
  add rsp, 16
  pop rbp
  ret 

